--- a/menu/templates/menu/aptzr.html
+++ b/menu/templates/menu/aptzr.html
@@ -2,7 +2,7 @@ Appetizers:
 {% if appetizer_list %}
     <ul>
     {% for apt in appetizer_list %}
-        {{apt.name}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{apt.price}}
+        {{apt.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{apt.price}}
     {% endfor %}
     </ul>
 {% else %}
