--- a/menu/templates/menu/home.html
+++ b/menu/templates/menu/home.html
@@ -6,8 +6,10 @@
 <body>
     <h1>Welcome to Osaka!</h1>
     <h2>Menu</h2>
-    <a href="{% url 'sushi' %}">Sushi</a>
     <a href="{% url 'appetizer' %}">Appetizer</a>
+    <a href="{% url 'sushi' %}">Sushi Bar</a>
+    <a href="{% url 'kitchen' %}">Kitchen</a>
+    <a href="{% url 'hibachi' %}">Hibachi</a>
 
 </body>
 </html>
