--- a/menu/templates/menu/base.html
+++ b/menu/templates/menu/base.html
@@ -1,4 +1,20 @@
-<div class="topnav">
-  <a href="{% url 'home' %}">Home</a>
-  <a href="{% url 'sushi %}">Sushi</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+    <h1>Osaka</h1>
+    <h2>Menu</h2>
+    <a href="{% url 'appetizer' %}">Appetizer</a>
+    <a href="{% url 'sushi' %}">Sushi Bar</a>
+    <a href="{% url 'kitchen' %}">Kitchen</a>
+    <a href="{% url 'hibachi' %}">Hibachi</a>
+
+    <br>
+
+    {% block content %}
+    {% endblock %}
+
+</body>
+</html>
