--- a/menu/templates/menu/kitchen.html
+++ b/menu/templates/menu/kitchen.html
@@ -1,10 +1,14 @@
-Kitchen:
-{% if kitchen_list %}
-    <ul>
-    {% for k in kitchen_list %}
-        {{k.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{k.price}}
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No dishes are available.</p>
-{% endif %}
+{% extends 'menu/base.html' %}
+
+{% block content %}
+    Kitchen:
+    {% if kitchen_list %}
+        <ul>
+        {% for k in kitchen_list %}
+            {{k.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{k.price}}
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No dishes are available.</p>
+    {% endif %}
+{% endblock %}
