completed logic for hibachi page

--- a/menu/templates/menu/hibachi.html
+++ b/menu/templates/menu/hibachi.html
@@ -1,10 +1,32 @@
 {% extends 'menu/base.html' %}
 
 {% block content %}
-    Hibachi:
-    {% if hibachi_list %}
+    Hibachi Lunch:
+    {% if lunch_list %}
         <ul>
-        {% for h in hibachi_list %}
+        {% for h in lunch_list %}
+            {{h.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{h.price}}
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No hibachis are available.</p>
+    {% endif %}
+
+    Hibachi Dinner:
+    {% if dinner_list %}
+        <ul>
+        {% for h in dinner_list %}
+            {{h.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{h.price}}
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No hibachis are available.</p>
+    {% endif %}
+
+    Hibachi Kid:
+    {% if kid_list %}
+        <ul>
+        {% for h in kid_list %}
             {{h.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{h.price}}
         {% endfor %}
         </ul>
