--- a/menu/templates/menu/menu_nav.html
+++ b/menu/templates/menu/menu_nav.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        {% include 'menu/navbar.html' %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'menu/style.css' %}">
 </head>
 <body>
     <h1>Osaka</h1>
