--- a/menu/templates/menu/navbar.html
+++ b/menu/templates/menu/navbar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="name">Osaka</div>
+        <img src="{% static 'menu/images/logo.png' %}" class="logo" width="200" height="50">
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'menu' %}">Menu</a></li>
