--- a/menu/static/menu/style.css
+++ b/menu/static/menu/style.css
@@ -1,5 +1,6 @@
 *{
     background-color: black;
+    font-family: Arial;
 }
 
 body {
@@ -22,11 +23,16 @@ body {
     text-transform: uppercase;
 }
 
+.menu-nav {
+    text-align: center;
+}
+
 .menu-nav ul li{
     list-style: none;
     display: inline-block;
     margin: 0 10px;
 }
+
 .menu-nav ul li a{
     text-decoration: none;
     color: #fff;
@@ -35,4 +41,29 @@ body {
 .description {
     font-size: 0.9rem;
     font-style: italic;
+}
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 850px;
+}
+.content-title {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.3em;
+}
+.content span {
+    display: inline-block;
+    width: 60%;
+}
+.price {
+    text-align: right;
+}
+.container {
+    display: flex;
+    align-content: space-between;
+}
+.container span {
+    font-weight: bold;
 }
