--- a/menu/templates/menu/sushi.html
+++ b/menu/templates/menu/sushi.html
@@ -4,11 +4,14 @@
     <br>
     <br>
 
-    Normal/Hand Rolls:
+<div class="content-title">Normal/Hand Rolls</div>
+<div class="content">
     {% if normal_sushi_list %}
         <ul>
         {% for sushi in normal_sushi_list %}
-            <b>{{sushi.name}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{sushi.price}}</b>
+            <div class="container">
+                <span class="name">{{sushi.name}}</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="price">{{sushi.price}}</span>
+            </div>
             <p></p>
 
             <div class="description">{{sushi.description}}</div>
@@ -20,13 +23,17 @@
         <p>No sushi are available.</p>
     {% endif %}
 
-    Special Rolls:
+    <div class="content-title">Special Rolls</div>
     {% if special_sushi_list %}
         <ul>
         {% for sushi in special_sushi_list %}
-            {{sushi.name}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{sushi.price}}
+            <div class="container">
+                <span class="name">{{sushi.name}}</span>
+                <span class="price">{{sushi.price}}</span>
+            </div>
+
             <p></p>
-            {{sushi.description}}
+            <div class="description">{{sushi.description}}</div>
             <p></p>
         {% endfor %}
         </ul>
@@ -34,15 +41,20 @@
         <p>No sushi are available.</p>
     {% endif %}
 
-    Sushi & Sashimi:
+    <div class="content-title">Sushi & Sashimi</div>
     {% if sushi_sashimi_list %}
         <ul>
+
         {% for sushi in sushi_sashimi_list %}
-            {{sushi.name}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{sushi.price}}
+            <div class="container">
+                <span class="name">{{sushi.name}}</span>
+                <span class="price">{{sushi.price}}</span>
+            </div>
             <p></p>
         {% endfor %}
         </ul>
     {% else %}
         <p>No sushi are available.</p>
     {% endif %}
+</div>
 {% endblock %}
