--- a/menu/templates/menu/kitchen.html
+++ b/menu/templates/menu/kitchen.html
@@ -1,25 +1,37 @@
 {% extends 'menu/menu_nav.html' %}
 
 {% block content %}
-    Bento Box (Lunch):
-    {% if box_list %}
-        <ul>
-        {% for b in box_list %}
-            {{b.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{b.price}}
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No dishes are available.</p>
-    {% endif %}
+    <div class="content">
+        <div class="content-title">
+            Bento Box (Lunch)
+        </div>
+        {% if box_list %}
+            <ul>
+            {% for b in box_list %}
+                <div class="container">
+                    <span class="name">{{b.name}}</span>
+                    <span class="price">{{b.price}}</span>
+                </div>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No dishes are available.</p>
+        {% endif %}
 
-    Dinner from the Kitchen:
-    {% if dinner_list %}
-        <ul>
-        {% for d in dinner_list %}
-            {{d.name}} &nbsp&nbsp&nbsp&nbsp&nbsp; {{d.price}}
-        {% endfor %}
-        </ul>
-    {% else %}
-        <p>No dishes are available.</p>
-    {% endif %}
+        <div class="content-title">
+            Dinner from the Kitchen
+        </div>
+        {% if dinner_list %}
+            <ul>
+            {% for d in dinner_list %}
+                <div class="container">
+                    <span class="name">{{d.name}}</span>
+                    <span class="price">{{d.price}}</span>
+                </div>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No dishes are available.</p>
+        {% endif %}
+    </div>
 {% endblock %}
