revised text font

--- a/menu/static/menu/style.css
+++ b/menu/static/menu/style.css
@@ -39,7 +39,7 @@ body {
     text-transform: uppercase;
 }
 .description {
-    font-size: 0.9rem;
+    font-size: 1em;
     font-style: italic;
 }
 .content {
@@ -51,7 +51,7 @@ body {
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 2em;
 }
 .content span {
     display: inline-block;
@@ -59,6 +59,9 @@ body {
 }
 .price {
     text-align: right;
+}
+.name{
+    font-size: 1.5em;
 }
 .container {
     display: flex;
