added revised styling

--- a/menu/templates/menu/aptzr.html
+++ b/menu/templates/menu/aptzr.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="content">
-    <div class="content-title">Appetizers From the Kitchen:</div>
+    <div class="content-title">Appetizers From Kitchen</div>
     {% if appetizer_kitchen_list %}
         <ul>
         {% for apt in appetizer_kitchen_list %}
@@ -17,7 +17,7 @@
         <p>No appetizers are available.</p>
     {% endif %}
 
-    <div class="content-title">Appetizers From Sushi Bar:</div>
+    <div class="content-title">Appetizers From Sushi Bar</div>
     {% if appetizer_sushi_list %}
         <ul>
         {% for apt in appetizer_sushi_list %}
