--- a/menu/static/menu/style.css
+++ b/menu/static/menu/style.css
@@ -1,6 +1,6 @@
 *{
     background-color: black;
-    font-family: Arial;
+    font-family: 'Montserrat',Helvetica,Arial,Lucida,sans-serif;
 }
 
 body {
@@ -15,12 +15,14 @@ body {
 .navbar ul li{
     list-style: none;
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 20px;
 }
 .navbar ul li a{
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
+    font-size: 1.7em;
+    font-weight: bold;
 }
 
 .menu-nav {
@@ -37,9 +39,10 @@ body {
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
+    font-size: 1.5em;
 }
 .description {
-    font-size: 1em;
+    font-size: 1.4em;
     font-style: italic;
 }
 .content {
@@ -51,7 +54,8 @@ body {
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2.1em;
+    color: red;
 }
 .content span {
     display: inline-block;
@@ -59,9 +63,10 @@ body {
 }
 .price {
     text-align: right;
+    font-size:  1.6em;
 }
 .name{
-    font-size: 1.5em;
+    font-size: 1.6em;
 }
 .container {
     display: flex;
