--- a/menu/templates/menu/navbar.html
+++ b/menu/templates/menu/navbar.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'menu' %}">Menu</a></li>
+            <li><a>Contact Us</a></li>
         </ul>
     </div>
     {% block content %}
